# libAIML

./: .gitignore  INSTALL  Makefile.am  README.md  TODO  config.h.in  configure.in  libaiml.pc.in  rebuild.sh
src/: Makefile.am  aiml.h  aiml_parser.cpp  aiml_parser.h  aisl_parser.cpp  aisl_parser.h  config_parser.cpp  core.cpp  core.h  graphmaster.cpp  javascript.cpp  javascript.h  serializer.cpp  serializer.h  stuff.cpp  template_parser.cpp  user.cpp  user.h
std_utils/: AUTHORS  ChangeLog  Makefile.am  Makefile.in  README  TODO  aclocal.m4  config.h.in  configure  configure.in  configure.in~
std_utils/src/: Makefile.am  Makefile.in  cconfig.h
std_utils/stdutil_test/: Makefile.am  Makefile.in  test.cpp
test_app/: Makefile.am  main.cpp  userlist.xml
test_app/aiml/: Makefile.in  TestJavaScript.aiml
util/: Makefile.am  main.cpp  parser.cpp  parser.h
